kubernetes/apps/worker-apps/woodpecker/app/httproute.yaml
---
# yaml-language-server: $schema=https://soulwhisper.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &name woodpecker-server
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/icon: woodpecker-ci.svg
    gethomepage.dev/name: Woodpecker
    gethomepage.dev/group: Service
    gethomepage.dev/pod-selector: app.kubernetes.io/instance=woodpecker,app.kubernetes.io/name=server
spec:
  hostnames: ["ci.noirprime.com"]
  parentRefs:
    - name: kgateway-internal
      namespace: networking-system

  rules:
    - backendRefs:
        - name: *name
          port: 80
